--- a/style.css
+++ b/style.css
@@ -208,7 +208,7 @@ button {
     100% { transform: translateY(-140vh) scale(1.1); }
 }
 
-big-heart {
+.big-heart {
     position: fixed;
     top: 50%;
     left: 50%;
